added membershipid filter to the getMemberList
